syntax = "proto3";

package sendOtpPackage;


service sendOtpService {
    rpc sendOtp (sendOtpRequest) returns (sendOtpResponse);
};

message sendOtpRequest {
    string to = 1;
    string subject = 2;
    string data = 3;
};

message sendOtpResponse {
    bool sent = 1;
}